# TestAndDebug

./: README.md  file1.txt
Examples/ROCgemm/: Makefile  out.summary  out00  rocblas_sgemm_example.cpp  run_1024.sh  run_1024_1025.out  run_5760.sh  run_deep_bench.sh  run_miopen.out  run_miopen.sh  run_multiple_1024.sh  run_multiple_256.sh  run_multiple_512.sh  run_sgemm.sh
Examples/ROCgemm/lib/: dnn_gemms.h  librocblas-hcc.a.verb
Examples/ROCger/: Makefile  rocblas_sger_example.cpp
Examples/aqua_scal/: CMakeLists.txt  main.cpp
Examples/atomicAdd/: Makefile  atomic_add.cpp
Examples/bfloat16/: CMakeLists.txt  main.cpp  rocblas_bfloat16.h
Examples/br_symm/: Makefile  README  main.cpp  symm_block_recursive.cpp  symm_block_recursive.hpp  symm_reference.cpp  symm_reference.hpp  test.sh
Examples/cuGemm/: Makefile  matrixMulCUBLAS.cpp  matrixMulCUBLAS.cpp.orig
Examples/cuSaxpy/: Makefile
Examples/deprecate_with_header/: Makefile  main_v1.cpp  main_v2.cpp  my_function_v1.h  my_function_v2.h  my_functions.cpp
Examples/dgmm/: CMakeLists.txt  dgmm_reference.hpp  main.cpp  rocblas_dgmm.hpp  run_test.sh
Examples/f16_f32_r_gemm_ex/: Makefile  f16_f32_r_gemm_ex_example.cpp
Examples/free_list_allocator/: CMakeLists.txt  free_list_allocator.hpp  linked_list.hpp  main.cpp
Examples/gemm_astaux/: Makefile  ast_gemm.cpp  ast_gemm.h  astaux.h  main.cpp  run_general_alpha_beta.sh  run_test.sh  test_gemm.cpp
Examples/gemm_strided_batched/: Makefile  bench_to_test.cpp  example_sgemm_strided_batched.cpp  gemm.sb.txt  gemm.sb.txt.out  gemm.txt  gemm.txt.out  out-test_conv-ctest-fwd-.fp16.rocblas_config.sh  out-test_conv-ctest-fwd-.fp32.rocblas_config.sh  parse.py  parse_strided_batched.py
Examples/gemm_strided_batched/implemented/: gemm.sb.txt  gemm.sb.txt.out  gemm.txt  gemm.txt.out  gemm_strided_batched.txt  gemm_strided_batched.txt.out  out-test_conv-ctest-bwddata-.fp16.rocblas_config.sh  out-test_conv-ctest-bwddata-.fp32.rocblas_config.sh  out-test_conv-ctest-bwdwrw-.fp16.rocblas_config.sh  out-test_conv-ctest-bwdwrw-.fp32.rocblas_config.sh  out-test_conv-inception4-bwddata-.fp16.rocblas_config.sh  out-test_conv-inception4-bwddata-.fp32.rocblas_config.sh  out-test_conv-inception4-bwdwrw-.fp16.rocblas_config.sh  out-test_conv-inception4-bwdwrw-.fp32.rocblas_config.sh  out-test_conv-inception4-fwd-.fp16.rocblas_config.sh  (+7 more)
Examples/h2axpy/: Makefile  h2axpy_dx4.cpp
Examples/haxpy/: Makefile  haxpy.cpp
Examples/hgemmYaml/: hgemm_256_8.yaml  hgemm_8_8_16_4096.yaml
Examples/hgemmYaml/source/: Client.h  (+9 more)
Examples/hipExtModuleLaunchKernel/: Makefile  README.txt  kernels.cpp  launchKernelHcc.cpp
Examples/hpa_hgemv/: Makefile  hpa_hgemv.cpp
Examples/i8_dot4/: CMakeLists.txt  README  main.cpp  main.nodot.cpp
Examples/ieee32_reduction_precision/: Makefile  main.cpp
Examples/ldc0/: Makefile  ldc0.cpp
Examples/limits/: limits.cpp
Examples/pack_char4/: Makefile  pack_int8_in_uint32.cpp
Examples/profile/: README.txt
Examples/set_matrix/: CMakeLists.txt  main.cpp
Examples/sscal/: Makefile  rocblas_sscal_example.cpp
Examples/symm/: CMakeLists.txt  README  main.cpp  rocblas-types.h  runtest.sh  symm_l3_reference.hpp  symm_reference.hpp
Examples/syrkx/: Makefile  main.cpp
Examples/syrkx_kernel/: Makefile  gemm_batched.cpp  gemm_batched.h  gemm_batched_new.cpp  gemm_batched_new.h  main.cpp
Examples/timeHaxpy/: Makefile  time_haxpy.cpp
Examples/trmm/: CMakeLists.txt  dcld.hpp  main.cpp  rocblas_trmm.hpp  trmm_gemm_based.4.hpp  trmm_gemm_based.hpp  trmm_reference.hpp
Examples/trmm/f2c_gemm_based/: trmm_gemm_based.4.hpp
Help/: ROCm5.4_install.txt  clang-format.txt  general.html  mil_email.txt  rocBLAS_doc.txt
Help/scratch/: right.out
Scripts/: build_test_rocblas.sh  clang-format.sh  clang-format_all.sh  clone_rocblas.sh  edit_files.sh  edit_hipLaunchKernel.sh  edit_space.sh  hipblas.sh  junk.sh  rocblas.sh  run_separate_tests.sh  test_spaces.txt  update_branch.sh
Scripts/all_rights_reserved/: all_rights_reserved.sh  insert.c.txt  insert.f90.txt  insert.py.txt  x11.c.sh  x11.f90.sh  x11.py.sh
Scripts/mainline/: README.txt  compare-mainline.py  find-no-npi.py
Scripts/performance/: performance.patch
kblas-gpu/: kblas-test-l2.sh  kblas-test-l3.py
kblas-gpu/include/: operators.h
kblas-gpu/src/: Makefile  atomicAddType.cu  edit_files.sh  ssymv.cpp  ssymv.cut.cu  syhemv_core.cut.cu  syhemv_core.hpp
kblas-gpu/testing/: Makefile
sacraficial/: f.txt  h.txt  i.txt  j.txt
(+36 files in other folders)
